[package]
name = "toql_mysql_async"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "MySql Async for Toql"
keywords = ["toql", "mysql"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
toql = { git="https://github.com/roy-ganz/toql.git", branch="v0.3"  }

mysql_async = "0.27"
async-trait = "0.1"


log= "0.4"
lru="0.6"

[dev-dependencies]
tokio ={ version = "1", features = ["full"] }

[patch.'https://github.com/roy-ganz/toql.git']
toql= {path="../toql"}





