[package]
name = "toql_mysql_async"
version = "0.4.2"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "MySQL Async for Toql"
keywords = ["toql", "mysql"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql_mysql_async"

[dependencies]
toql = { version ="^0.4.2", git="https://github.com/roy-ganz/toql.git" }
mysql_async = "0.29"
async-trait = "0.1"
tracing= "0.1"
thiserror = "1"
mysql_common = {version= "0.28", features=["chrono"]}
futures-core = "0.3"

[dev-dependencies]
tokio ={ version = "1", features = ["full"] }

[patch.'https://github.com/roy-ganz/toql.git']
toql= {path="../toql"}





